# chat-message-react-fastapi

./: BLOG_CHAT_USER_GUIDE.md  CHANGED.md  README.md  frontend-plan.md
app/: .env  README.md  pubspec.yaml
app/lib/: main.dart
app/test/: widget_test.dart
backend/: .gitignore  BACKEND_HYBRID_SETUP.md  README.md  REALTIME_COMMUNICATION_OPTIONS.md  WEBSOCKET_ARCHITECTURE.md  WEBSOCKET_EVENTS.md  init_db.py  main.py  migrate_avatar_to_text.py  pyproject.toml  requirements.txt  uv.lock.example
backend/app/: auth.py  config.py  database.py  dependencies.py  models.py  schemas.py  websocket.py
backend/app/routers/: auth.py  messages.py  realtime.py  rooms.py  upload.py  users.py
deployment/: CLOUDFLARE_CACHE_FIX.md  README.md  UVICORN_GUNICORN_SETUP.md  chat-ai-tracks-com-uvicorn-gunicorn.service  deploy-frontend.sh  fix-bashrc.sh  frontend-deploy.md  nginx.conf  troubleshooting.md  uv-install-guide.md  uvicorn-gunicorn.service  websocket-troubleshooting.md
frontend/: .env.production  App.tsx  HYBRID_REALTIME_GUIDE.md  README.md  index.css  index.html  metadata.json  package.json  pnpm-lock.yaml  tsconfig.json  types.ts  vite-env.d.ts
frontend/components/: ChatApp.tsx
frontend/services/: api.ts  imageUtils.ts  mockBackend.ts  realtimeConnection.ts
mobile/: .env  FIX_DEV_SERVER.md  README.md  TROUBLESHOOTING.md  app.json  package-lock.json  package.json  pnpm-lock.yaml
mobile/app/: _layout.tsx  index.tsx
mobile/components/: ChatInput.tsx  MessageItem.tsx  RoomItem.tsx
mobile/constants/: config.ts
mobile/services/: api.ts  websocket.ts
(+21 files in other folders)
